fix: update CDR generation logic